js/src/tests/test262/language/expressions/class/elements/syntax/early-errors/invalid-names/field-init-fn-call-expression-bad-reference.js
DONOTEVALUATE
(
)
;
var
C
=
class
{
f
=
function
(
)
{
(
(
)
=
>
{
}
)
(
)
.
#
x
}
}
;
